<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    tools:context="com.dgaf.happyhour.Controller.AboutFragment">

    <ScrollView
        android:id="@+id/aboutScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_us_title"
                android:textSize="24dp"
                android:layout_margin="5dp"
                android:gravity="center"
                android:padding="5dp"/>

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/ic_launcher"
                android:id="@+id/burrdIcon"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_us_david"
                android:textSize="15dp"
                android:layout_margin="5dp"
                android:padding="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_andrew"
                android:textSize="15dp"
                android:layout_margin="5dp"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_adam"
                android:textSize="15dp"
                android:layout_margin="5dp"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_trent"
                android:textSize="15dp"
                android:layout_margin="5dp"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_soham"
                android:textSize="15dp"
                android:layout_margin="5dp"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_chloe"
                android:textSize="15dp"
                android:layout_margin="5dp"
                android:padding="10dp"/>

            <TextView
                android:id="@+id/aboutText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_sherman"
                android:textSize="15dp"
                android:layout_margin="5dp"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_david"
                android:textSize="15dp"
                android:layout_margin="5dp"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_anjali"
                android:textSize="15dp"
                android:layout_margin="5dp"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_ken"
                android:textSize="15dp"
                android:layout_margin="5dp"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_brenton"
                android:textSize="15dp"
                android:layout_margin="5dp"
                android:padding="10dp"/>

        </LinearLayout>

    </ScrollView>

</FrameLayout>
